<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="14dp"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/blue_500"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/tvFirstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textColor="@color/editText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@xml/input"
            android:ems="10"
            android:inputType="text"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/middle_name"
            android:textColor="@color/editText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/middle_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@xml/input"
            android:ems="10"
            android:inputType="text"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textColor="@color/editText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@xml/input"
            android:ems="10"
            android:inputType="text"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/editText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@xml/input"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/editText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@xml/input"
            android:ems="10"
            android:inputType="textPassword"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cpassword"
            android:textColor="@color/editText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/cpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@xml/input"
            android:ems="10"
            android:inputType="textPassword"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_no"
            android:textColor="@color/editText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/phone_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@xml/input"
            android:ems="10"
            android:inputType="phone"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="@color/editText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:background="@xml/input"
            android:ems="10"
            android:inputType="textMultiLine"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textColor="@color/editText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@xml/input"
            android:ems="10"
            android:inputType="text"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pincode"
            android:textColor="@color/editText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/pincode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@xml/input"
            android:ems="10"
            android:inputType="number"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="@color/editText"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="10dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingRight="50dp"
                android:text="@string/male"
                android:textColor="@color/editText"
                android:textSize="18dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingRight="20dp"
                android:text="@string/female"
                android:textColor="@color/editText"
                android:textSize="18dp" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/birth_date"
            android:textColor="@color/editText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/birthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@xml/input"
            android:inputType="date"
            android:padding="10dp" />

        <Button
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@xml/button"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:text="@string/already_have_account"
            android:textColor="@color/blue_500"
            android:backgroundTint="@color/white" />
    </LinearLayout>
</ScrollView>