<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".ComplainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tvComplain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/complain"
            android:textColor="@color/purple_500"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:textColor="@color/editText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextuser_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@xml/input"
            android:hint="Enter Name"
            android:inputType="text"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/editText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="Enter Email"
            android:background="@xml/input"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/policeStation"
            android:textColor="@color/editText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextPoliceStation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="Enter Near By Police Station"
            android:background="@xml/input"
            android:inputType="text"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crime_spot"
            android:textColor="@color/editText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextcrime_spot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="Enter Crime Spot"
            android:background="@xml/input"
            android:lines="3"
            android:inputType="textMultiLine"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pincode"
            android:textColor="@color/editText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextpincode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@xml/input"
            android:hint="Enter Crime Spot Pincode"
            android:inputType="number"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/editText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextdescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@xml/input"
            android:hint="Enter Description Related to Crime"
            android:inputType="textMultiLine"
            android:lines="3"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textColor="@color/editText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextcategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@xml/input"
            android:hint="Enter Crime Category"
            android:inputType="text"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/incidentDate"
            android:textColor="@color/editText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextdate_of_incident"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@xml/input"
            android:hint="Enter Date"
            android:inputType="date"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/incidentTime"
            android:textColor="@color/editText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTexttime_of_incident"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@xml/input"
            android:imeOptions="actionDone"
            android:hint="Enter TIme"
            android:inputType="time"
            android:padding="10dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:indeterminateTint="@color/progressColor"
            android:layout_marginLeft="150dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@xml/button"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_marginBottom="30dp"
            android:text="@string/submitReport"
            android:textColor="@color/white" />

    </LinearLayout>
</ScrollView>